# hymeta_evolve

./: .gitignore  CMakeLists.txt  README.md  baseline_cache.json  config.yaml  config_diverse.yaml  config_diverse_glm.yaml  evaluator.py  initial_program.cpp  initial_program_diverse.cpp  manual_smoke.py  manual_smoke_results.json  sim_validate_28configs.py
bench_results/: sst_layout.json
docs/: IMPLEMENTATION.md  PRESENTATION_SUMMARY.md  SIMULATOR.md
experiments/: 20260616_openevolve_experiment_summary.md  README.md  latest_comparison.txt  summary.csv
experiments/20260615_162848_diverse_glm_iter200/output/checkpoints/checkpoint_50/: best_program.cpp  best_program_info.json
experiments/20260615_171311_diverse_glm_partbase_iter200/output/best/: best_program.cpp  best_program_info.json
experiments/20260615_182729_diverse_glm_s27182_iter200/output/best/: best_program.cpp  best_program_info.json
experiments/20260615_202341_diverse_glm_s16180_iter200/output/best/: best_program.cpp  best_program_info.json
harness/: layout_loader.cpp  layout_loader.hpp  sim_engine.cpp  sim_engine.hpp  sim_main.cpp  workload.cpp  workload.hpp
scripts/: bench_250gb.sh  bench_fio_nvme.sh  compare_experiments.py  evolve_diverse.sh  evolve_recorded.sh  extended_real_16t.sh  hybrid_real_16t.sh  plot_iter_score.py  plot_per_scenario.py  pure_baseline_real_16t.sh  run_diverse_experiment.sh  run_diverse_glm_repeats.sh  shortening_compare_5gb.sh  summarize_evolve_run.py
